--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;500;700;900&display=swap");
+
+* {
+  font-family: "Spartan", sans-serif;
+  outline: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
+  color: #fff;
+  font-family: "Spartan", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.MuiTypography-root {
+  font-family: "Spartan", sans-serif !important;
 }
